[gd_scene load_steps=6 format=3 uid="uid://c4ueteb5k14lc"]

[ext_resource type="Script" path="res://scenes/win/win.gd" id="1_8qonc"]
[ext_resource type="Shader" path="res://materials/tiling_shader.gdshader" id="2_1d2ed"]
[ext_resource type="Texture2D" uid="uid://c031a0c5v45ux" path="res://textures/tiledBlueBackground.png" id="3_73yrp"]
[ext_resource type="Script" path="res://ui/score.gd" id="4_57snb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iyynm"]
shader = ExtResource("2_1d2ed")

[node name="Win" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qonc")

[node name="Background" type="TextureRect" parent="."]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_iyynm")
layout_mode = 2
texture = ExtResource("3_73yrp")
expand_mode = 1
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(720, 540)
ignore_rotation = false

[node name="CenterContainer" type="CenterContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/Title"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Level Cleared!"

[node name="Score" type="Label" parent="CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SCORE: 0"
horizontal_alignment = 1
script = ExtResource("4_57snb")

[node name="MenuButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="LevelSelectButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Level Select"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Return to Main Menu"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/LevelSelectButton" to="." method="_on_level_select_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
